# TuringBotClient

./: .gitignore  LICENSE  README.md  TuringBotClient.py  pyproject.toml  setup.py
example/: ExampleBot.py
