[project]
name = "turing-bot-client"
version = "0.0.2"
authors = [
  { name="Simon Schmid", email="simon.schmid@scch.at" },
]
description = "This library allows the development of bots for the turing game on play.turinggame.ai"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pydantic>=2.8.2","setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/SCCH-Nessler/TuringBotClient"